bebytes/tests/compile_time/unsupported_isize.stderr
error: Unsupported type for bits attribute. Only integer types (u8, i8, u16, i16, u32, i32, u64, i64, u128, i128) are supported
  --> tests/compile_time/unsupported_isize.rs:10:13
   |
10 |     second: isize,
   |             ^^^^^
